# TI-Radarv3.0

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: backend.yml  docker.yml  frontend.yml  integration.yml  pr-gate.yml  proto.yml
database/: Dockerfile  alembic.ini  create_dump.sh  create_split_dump.sh  restore_on_server.sh  restore_split_dump.sh
database/.claude/: settings.local.json
database/migrations/: env.py
database/migrations/versions/: 001_consolidated_schema.py  001_initial_schema.py
database/mock_data/: README.md  euroscivoc.csv  organizations.csv  patents.csv  project_euroscivoc.csv  projects.csv  seed_mock.sql
database/sql/: 001_extensions.sql  002_schema.sql  003_postgresql_tuning.sql  004_query_translation.sql  005_fix_export_schema.sql  005_import_log.sql  006_citation_schema.sql  007_publication_role.sql  008_seed_cordis.sh  010_fix_vector_dims_and_missing_tables.sql  011_fix_mock_junctions.sql  fix_grants.sql  refresh_cross_schema_mvs.sql  restore_dump.sql  seed_junctions.sql  seed_junctions_production.sql  seed_mock.sh
database/sql/_archived/: 009_api_cache.sql
deploy/: Makefile  docker-compose.server.yml  docker-compose.yml
docs/: API.md  ARCHITEKTUR.md  DATENMODELL.md  DEPLOYMENT.md  LLM.md
docs/backgrounds/: bg_variant_1_mesh_log.json  bg_variant_2_topo_log.json  bg_variant_3_particles_log.json  slide_background_dark_log.json  slide_background_dark_v2_log.json
docs/diagrams/: .$erm_ti_radar.drawio.bkp  erm_ti_radar.d2  erm_ti_radar.drawio  erm_ti_radar.gv  erm_ti_radar.mmd  mermaid-config.json  system_architecture.d2
docs/testing/: README.md  test_protokoll_agent1_cypress.md  test_protokoll_agent2_k6.md  test_protokoll_agent3_schemathesis.md  test_protokoll_claude_playwright.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
proto/: buf.yaml  common.proto  embedding.proto  llm.proto  retrieval.proto  uc10_euroscivoc.proto  uc11_actor_type.proto  uc12_patent_grant.proto  uc1_landscape.proto  uc2_maturity.proto  uc3_competitive.proto  uc4_funding.proto  uc5_cpc_flow.proto  uc6_geographic.proto  uc7_research_impact.proto  uc8_temporal.proto  uc9_tech_cluster.proto  uc_c_publications.proto
scripts/: add_challenges_slide.py  add_etl_slides.py  add_schema_slides.py  add_security_slide.py  create_icon_slides.py  extract_schema_pngs.py  generate_protos.sh  populate_embeddings.py  restore_missing_slides.py  setup.ps1  setup.sh  start.ps1  start.sh  update_pptx_screenshots_and_umlauts.py
services/: uc-service.Dockerfile
services/actor-type-svc/: pyproject.toml
services/actor-type-svc/src/: __init__.py  config.py  server.py  service.py
services/actor-type-svc/src/domain/: __init__.py  metrics.py
services/actor-type-svc/src/infrastructure/: gleif_adapter.py  repository.py
services/actor-type-svc/tests/: conftest.py  test_mappers.py
services/actor-type-svc/tests/unit/: test_actor_scope_label.py  test_classification_coverage.py  test_gleif_adapter_logging.py
services/competitive-svc/: pyproject.toml
services/cpc-flow-svc/: pyproject.toml
services/embedding-svc/: Dockerfile  pyproject.toml  trigger_chunk_embed.py
services/euroscivoc-svc/: pyproject.toml
services/export-svc/: Dockerfile  pyproject.toml
services/export-svc/src/: config.py  db_schema.py  main.py  router_export.py
services/export-svc/src/exporters/: csv_exporter.py  excel_exporter.py  pdf_exporter.py
services/export-svc/src/templates/: report_base.html  report_styles.css
services/export-svc/tests/: conftest.py  test_ensure_schema.py
services/funding-svc/: pyproject.toml
services/geographic-svc/: pyproject.toml
services/geographic-svc/src/: __init__.py  config.py  server.py  service.py
services/geographic-svc/src/domain/: __init__.py  metrics.py
services/geographic-svc/src/infrastructure/: repository.py
services/geographic-svc/tests/: conftest.py
services/geographic-svc/tests/unit/: test_cooperation_score.py  test_mappers.py
services/import-svc/: Dockerfile  pyproject.toml
services/import-svc/src/: config.py  main.py  router_import.py  scheduler.py
services/import-svc/src/importers/: cordis_api_adapter.py  cordis_importer.py  epo_enrichment.py  epo_importer.py  epo_ops_adapter.py  euroscivoc_importer.py  junction_deriver.py
services/landscape-svc/: Dockerfile  pyproject.toml
services/llm-svc/: Dockerfile  pyproject.toml
services/maturity-svc/: pyproject.toml
services/orchestrator-svc/: Dockerfile  pyproject.toml
services/orchestrator-svc/src/: __init__.py  actor_scope_injection.py  auth.py  config.py  grpc_clients.py  main.py  middleware.py  router_analyze.py  router_chat.py  router_health.py  router_radar.py  router_suggestions.py  schemas.py
services/orchestrator-svc/tests/: conftest.py
services/orchestrator-svc/tests/unit/: test_actor_scope_injection.py
services/patent-grant-svc/: pyproject.toml
services/publication-svc/: pyproject.toml
services/research-impact-svc/: pyproject.toml
services/retrieval-svc/: Dockerfile  pyproject.toml
services/retrieval-svc/src/: __init__.py  config.py  fusion.py  server.py  service.py  use_case.py
services/retrieval-svc/src/domain/: ports.py
services/retrieval-svc/src/infrastructure/: query_embedder.py  remote_query_embedder.py  repository.py  reranker.py  sparse_repository.py
services/retrieval-svc/tests/: test_fusion.py  test_repository.py  test_reranker.py  test_sparse_repository.py  test_use_case.py
services/tech-cluster-svc/: pyproject.toml
services/temporal-svc/: pyproject.toml
tests/: __init__.py  pytest.ini
tests/contract/: __init__.py  conftest.py  test_grpc_contract.py  test_orchestrator_contract.py
tests/integration/: __init__.py  conftest.py  requirements.txt  test_actor_consistency.py  test_patent_consistency.py  test_publication_consistency.py  test_uc1_landscape.py  test_uc3_competitive.py  test_uc4_funding.py
tests/validation/: __init__.py  test_v1_v2_parity.py
(+314 files in other folders)
