[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator-svc"
version = "2.0.0"
description = "TI-Radar v2 Orchestrator Service — API Gateway mit gRPC Fan-Out zu 12 UC-Services"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Benjamin Schaefer" }]

dependencies = [
    # Web-Framework + ASGI-Server
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",

    # gRPC Client (async)
    "grpcio>=1.68,<2.0",
    "grpcio-tools>=1.68,<2.0",
    "protobuf>=6.31,<7.0",

    # Validierung + Konfiguration
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",

    # Datenbank (Suggestions-Endpoint)
    "asyncpg>=0.30,<1.0",

    # Monitoring + Observability
    "prometheus-client>=0.21,<1.0",
    "structlog>=24.4,<25.0",

    # HTTP-Client (Health-Checks, optionale externe Aufrufe)
    "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "grpc-stubs>=1.53",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
